Добавил Стаса - автора

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -9,8 +9,8 @@
 \rustitle{Обзор методов (уточнить - каких?) \newline по решению задачи разрешения лексической многозначности}
 \engtitle{Word-sense disambiguation methods (specific?) review}
 
-\rusauthor{А.~С.~Румянцев}
-\engauthor{A.~S.~Rumyantsev}
+\rusauthor{С.~С.~Ткач}
+\engauthor{S.~S.~Tkach}
 
 \organization{Институт прикладных математических исследований Карельского научного центра РАН}
 
