--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -1,41 +1,41 @@
-\documentclass{article}
+п»ї\documentclass{article}
 \usepackage{krctran}
 
 \begin{document}
 
-\procname{Труды Карельского научного центра РАН\\ \No 0. 2010. С.~1--4}
-\udk{УДК 004.01:006.72 (470.22)}
+\procname{РўСЂСѓРґС‹ РљР°СЂРµР»СЊСЃРєРѕРіРѕ РЅР°СѓС‡РЅРѕРіРѕ С†РµРЅС‚СЂР° Р РђРќ\\ \No 0. 2010. РЎ.~1--4}
+\udk{РЈР”Рљ 004.01:006.72 (470.22)}
 
-\rustitle{Обзор методов (уточнить - каких?) \newline по решению задачи разрешения лексической многозначности}
+\rustitle{РћР±Р·РѕСЂ РјРµС‚РѕРґРѕРІ (СѓС‚РѕС‡РЅРёС‚СЊ - РєР°РєРёС…?) \newline РїРѕ СЂРµС€РµРЅРёСЋ Р·Р°РґР°С‡Рё СЂР°Р·СЂРµС€РµРЅРёСЏ Р»РµРєСЃРёС‡РµСЃРєРѕР№ РјРЅРѕРіРѕР·РЅР°С‡РЅРѕСЃС‚Рё}
 \engtitle{Word-sense disambiguation methods (specific?) review}
 
-\rusauthor{С.~С.~Ткач}
+\rusauthor{РЎ.~РЎ.~РўРєР°С‡}
 \engauthor{S.~S.~Tkach}
 
-\organization{Институт прикладных математических исследований Карельского научного центра РАН}
+\organization{РРЅСЃС‚РёС‚СѓС‚ РїСЂРёРєР»Р°РґРЅС‹С… РјР°С‚РµРјР°С‚РёС‡РµСЃРєРёС… РёСЃСЃР»РµРґРѕРІР°РЅРёР№ РљР°СЂРµР»СЊСЃРєРѕРіРѕ РЅР°СѓС‡РЅРѕРіРѕ С†РµРЅС‚СЂР° Р РђРќ}
 
-\rusabstract{Данный файл является примером статьи для научного издания Труды Карельского научного центра РАН, 
-серия <<Математическое моделирование и информационные технологии>>.
-В нем содержатся основные используемые переменные и окружения. При подготовке статьи рекомендуется
-воспользоваться этим примером в качестве шаблона. Данный абзац оформлен в стиле аннотации статьи.}
+\rusabstract{Р”Р°РЅРЅС‹Р№ С„Р°Р№Р» СЏРІР»СЏРµС‚СЃСЏ РїСЂРёРјРµСЂРѕРј СЃС‚Р°С‚СЊРё РґР»СЏ РЅР°СѓС‡РЅРѕРіРѕ РёР·РґР°РЅРёСЏ РўСЂСѓРґС‹ РљР°СЂРµР»СЊСЃРєРѕРіРѕ РЅР°СѓС‡РЅРѕРіРѕ С†РµРЅС‚СЂР° Р РђРќ, 
+СЃРµСЂРёСЏ <<РњР°С‚РµРјР°С‚РёС‡РµСЃРєРѕРµ РјРѕРґРµР»РёСЂРѕРІР°РЅРёРµ Рё РёРЅС„РѕСЂРјР°С†РёРѕРЅРЅС‹Рµ С‚РµС…РЅРѕР»РѕРіРёРё>>.
+Р’ РЅРµРј СЃРѕРґРµСЂР¶Р°С‚СЃСЏ РѕСЃРЅРѕРІРЅС‹Рµ РёСЃРїРѕР»СЊР·СѓРµРјС‹Рµ РїРµСЂРµРјРµРЅРЅС‹Рµ Рё РѕРєСЂСѓР¶РµРЅРёСЏ. РџСЂРё РїРѕРґРіРѕС‚РѕРІРєРµ СЃС‚Р°С‚СЊРё СЂРµРєРѕРјРµРЅРґСѓРµС‚СЃСЏ
+РІРѕСЃРїРѕР»СЊР·РѕРІР°С‚СЊСЃСЏ СЌС‚РёРј РїСЂРёРјРµСЂРѕРј РІ РєР°С‡РµСЃС‚РІРµ С€Р°Р±Р»РѕРЅР°. Р”Р°РЅРЅС‹Р№ Р°Р±Р·Р°С† РѕС„РѕСЂРјР»РµРЅ РІ СЃС‚РёР»Рµ Р°РЅРЅРѕС‚Р°С†РёРё СЃС‚Р°С‚СЊРё.}
 \engabstract{This file is an auxiliary example of an article prepared forTransactions of Karelian Research Centre of RAS.
 It contains most useful environments and variables. While preparing your article, it's recommended to use
 this text as a template. This paragraph is formatted as an Abstract of the article.}
 
-\ruskeywords{труды, шаблон, подготовка статьи.}
+\ruskeywords{С‚СЂСѓРґС‹, С€Р°Р±Р»РѕРЅ, РїРѕРґРіРѕС‚РѕРІРєР° СЃС‚Р°С‚СЊРё.}
 \engkeywords{transactions, template, article.}
 
 \maketitle
 
 \begin{articletext}
-\section{Введение}
-Статья, представляемая в научное издание, должна быть оформлена в соответствии
-с <<Правилами для авторов>>, размещенными на сайте \hbox{http://transactions.krc.karelia.ru}.
-Данный документ претендует на роль технической документации в помощь авторам.
-Достаточно подробную информацию по наборе в системе \LaTeX можно найти,
-напр., в работе~\cite{Latexrus}.
+\section{Р’РІРµРґРµРЅРёРµ}
+РЎС‚Р°С‚СЊСЏ, РїСЂРµРґСЃС‚Р°РІР»СЏРµРјР°СЏ РІ РЅР°СѓС‡РЅРѕРµ РёР·РґР°РЅРёРµ, РґРѕР»Р¶РЅР° Р±С‹С‚СЊ РѕС„РѕСЂРјР»РµРЅР° РІ СЃРѕРѕС‚РІРµС‚СЃС‚РІРёРё
+СЃ <<РџСЂР°РІРёР»Р°РјРё РґР»СЏ Р°РІС‚РѕСЂРѕРІ>>, СЂР°Р·РјРµС‰РµРЅРЅС‹РјРё РЅР° СЃР°Р№С‚Рµ \hbox{http://transactions.krc.karelia.ru}.
+Р”Р°РЅРЅС‹Р№ РґРѕРєСѓРјРµРЅС‚ РїСЂРµС‚РµРЅРґСѓРµС‚ РЅР° СЂРѕР»СЊ С‚РµС…РЅРёС‡РµСЃРєРѕР№ РґРѕРєСѓРјРµРЅС‚Р°С†РёРё РІ РїРѕРјРѕС‰СЊ Р°РІС‚РѕСЂР°Рј.
+Р”РѕСЃС‚Р°С‚РѕС‡РЅРѕ РїРѕРґСЂРѕР±РЅСѓСЋ РёРЅС„РѕСЂРјР°С†РёСЋ РїРѕ РЅР°Р±РѕСЂРµ РІ СЃРёСЃС‚РµРјРµ \LaTeX РјРѕР¶РЅРѕ РЅР°Р№С‚Рё,
+РЅР°РїСЂ., РІ СЂР°Р±РѕС‚Рµ~\cite{Latexrus}.
 
-\section{Структура файла в формате \LaTeXe}
+\section{РЎС‚СЂСѓРєС‚СѓСЂР° С„Р°Р№Р»Р° РІ С„РѕСЂРјР°С‚Рµ \LaTeXe}
 
 \begin{verbatim}
 \documentclass{article}
@@ -65,169 +65,169 @@ this text as a template. This paragraph is formatted as an Abstract of the artic
 \end{thebibliography}
 \end{articletext}
 
-\section{СВЕДЕНИЯ ОБ АВТОРE:}
+\section{РЎР’Р•Р”Р•РќРРЇ РћР‘ РђР’РўРћР E:}
 \begin{aboutauthors}
 ...
 \end{aboutauthors}
 \end{document}
 \end{verbatim}
 
-Преамбула статьи должна содержать две обязательные команды:
+РџСЂРµР°РјР±СѓР»Р° СЃС‚Р°С‚СЊРё РґРѕР»Р¶РЅР° СЃРѕРґРµСЂР¶Р°С‚СЊ РґРІРµ РѕР±СЏР·Р°С‚РµР»СЊРЅС‹Рµ РєРѕРјР°РЅРґС‹:
 \begin{verbatim}
 \documentclass{article}
 \usepackage{krctran}
 \end{verbatim}
 
-Далее формируется заголовок статьи: выходные данные, код УДК, название статьи, 
-авторы с указанием мест работы, аннотация,
-ключевые слова. Например, заголовок этого файла сформирован следующими командами: 
+Р”Р°Р»РµРµ С„РѕСЂРјРёСЂСѓРµС‚СЃСЏ Р·Р°РіРѕР»РѕРІРѕРє СЃС‚Р°С‚СЊРё: РІС‹С…РѕРґРЅС‹Рµ РґР°РЅРЅС‹Рµ, РєРѕРґ РЈР”Рљ, РЅР°Р·РІР°РЅРёРµ СЃС‚Р°С‚СЊРё, 
+Р°РІС‚РѕСЂС‹ СЃ СѓРєР°Р·Р°РЅРёРµРј РјРµСЃС‚ СЂР°Р±РѕС‚С‹, Р°РЅРЅРѕС‚Р°С†РёСЏ,
+РєР»СЋС‡РµРІС‹Рµ СЃР»РѕРІР°. РќР°РїСЂРёРјРµСЂ, Р·Р°РіРѕР»РѕРІРѕРє СЌС‚РѕРіРѕ С„Р°Р№Р»Р° СЃС„РѕСЂРјРёСЂРѕРІР°РЅ СЃР»РµРґСѓСЋС‰РёРјРё РєРѕРјР°РЅРґР°РјРё: 
 \begin{verbatim}
-\procname{Труды...\\ \No...}
-\udk{УДК...}
-\rustitle{Руководство...}
+\procname{РўСЂСѓРґС‹...\\ \No...}
+\udk{РЈР”Рљ...}
+\rustitle{Р СѓРєРѕРІРѕРґСЃС‚РІРѕ...}
 \engtitle{Usage...}
-\rusauthor{А.~С.~Румянцев}
+\rusauthor{Рђ.~РЎ.~Р СѓРјСЏРЅС†РµРІ}
 \engauthor{A.~S.~Rumyantsev}
-\organization{Институт...}
-\rusabstract{Данный файл...}
+\organization{РРЅСЃС‚РёС‚СѓС‚...}
+\rusabstract{Р”Р°РЅРЅС‹Р№ С„Р°Р№Р»...}
 \engabstract{This file...}
-\ruskeywords{труды,...}
+\ruskeywords{С‚СЂСѓРґС‹,...}
 \engkeywords{transactions,...}
 \maketitle
 \end{verbatim}
 
 \begin{Remark}
-Для ручной разбивки на строки названия статьи воспользуйтесь командой \verb"\newline".
+Р”Р»СЏ СЂСѓС‡РЅРѕР№ СЂР°Р·Р±РёРІРєРё РЅР° СЃС‚СЂРѕРєРё РЅР°Р·РІР°РЅРёСЏ СЃС‚Р°С‚СЊРё РІРѕСЃРїРѕР»СЊР·СѓР№С‚РµСЃСЊ РєРѕРјР°РЅРґРѕР№ \verb"\newline".
 \end{Remark}
 
 \bfullwidth
 \begin{figure}
 %\includegraphics[height=100mm,width=0.9\textwidth]{delay_HT.pdf}
-\caption{Задержки в модели 10-узловой системы, случай тяжелых хвостов}
+\caption{Р—Р°РґРµСЂР¶РєРё РІ РјРѕРґРµР»Рё 10-СѓР·Р»РѕРІРѕР№ СЃРёСЃС‚РµРјС‹, СЃР»СѓС‡Р°Р№ С‚СЏР¶РµР»С‹С… С…РІРѕСЃС‚РѕРІ}
 \label{fig5}
 \end{figure}
 \efullwidth
 
-\section{Основной текст}
-Текст статьи, а также список используемой литературы заключаются
-в окружение \verb"{articletext}".
+\section{РћСЃРЅРѕРІРЅРѕР№ С‚РµРєСЃС‚}
+РўРµРєСЃС‚ СЃС‚Р°С‚СЊРё, Р° С‚Р°РєР¶Рµ СЃРїРёСЃРѕРє РёСЃРїРѕР»СЊР·СѓРµРјРѕР№ Р»РёС‚РµСЂР°С‚СѓСЂС‹ Р·Р°РєР»СЋС‡Р°СЋС‚СЃСЏ
+РІ РѕРєСЂСѓР¶РµРЅРёРµ \verb"{articletext}".
 
-При наборе формул, желательно пользоваться
-окружениями \verb"{equation}", \verb"{align}" и др.
-Для ссылок на формулы удобно использовать команду \verb"\eqref{...}".
+РџСЂРё РЅР°Р±РѕСЂРµ С„РѕСЂРјСѓР», Р¶РµР»Р°С‚РµР»СЊРЅРѕ РїРѕР»СЊР·РѕРІР°С‚СЊСЃСЏ
+РѕРєСЂСѓР¶РµРЅРёСЏРјРё \verb"{equation}", \verb"{align}" Рё РґСЂ.
+Р”Р»СЏ СЃСЃС‹Р»РѕРє РЅР° С„РѕСЂРјСѓР»С‹ СѓРґРѕР±РЅРѕ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ РєРѕРјР°РЅРґСѓ \verb"\eqref{...}".
 
-\section{Библиография}
-Библиографические ссылки принято оформлять в виде [номер], в отличие от
-ранее принятых [Автор, год] (см., напр., \cite{Trans}). 
-Источник, процитированный выше, был набран командой
+\section{Р‘РёР±Р»РёРѕРіСЂР°С„РёСЏ}
+Р‘РёР±Р»РёРѕРіСЂР°С„РёС‡РµСЃРєРёРµ СЃСЃС‹Р»РєРё РїСЂРёРЅСЏС‚Рѕ РѕС„РѕСЂРјР»СЏС‚СЊ РІ РІРёРґРµ [РЅРѕРјРµСЂ], РІ РѕС‚Р»РёС‡РёРµ РѕС‚
+СЂР°РЅРµРµ РїСЂРёРЅСЏС‚С‹С… [РђРІС‚РѕСЂ, РіРѕРґ] (СЃРј., РЅР°РїСЂ., \cite{Trans}). 
+РСЃС‚РѕС‡РЅРёРє, РїСЂРѕС†РёС‚РёСЂРѕРІР°РЅРЅС‹Р№ РІС‹С€Рµ, Р±С‹Р» РЅР°Р±СЂР°РЅ РєРѕРјР°РЅРґРѕР№
 \begin{verbatim}
 \bibitem{Trans}
-\textit{Борисов~Г.~А., 
-Тихомирова~Т.~А.}
-Характеристики и свойства потерь 
-энергии и мощности на пределах 
-энергетического хозяйства региона //
-Труды Карельского научного центра 
-Российской академии наук. 2010. 
-\No 3. С.~4--10.
+\textit{Р‘РѕСЂРёСЃРѕРІ~Р“.~Рђ., 
+РўРёС…РѕРјРёСЂРѕРІР°~Рў.~Рђ.}
+РҐР°СЂР°РєС‚РµСЂРёСЃС‚РёРєРё Рё СЃРІРѕР№СЃС‚РІР° РїРѕС‚РµСЂСЊ 
+СЌРЅРµСЂРіРёРё Рё РјРѕС‰РЅРѕСЃС‚Рё РЅР° РїСЂРµРґРµР»Р°С… 
+СЌРЅРµСЂРіРµС‚РёС‡РµСЃРєРѕРіРѕ С…РѕР·СЏР№СЃС‚РІР° СЂРµРіРёРѕРЅР° //
+РўСЂСѓРґС‹ РљР°СЂРµР»СЊСЃРєРѕРіРѕ РЅР°СѓС‡РЅРѕРіРѕ С†РµРЅС‚СЂР° 
+Р РѕСЃСЃРёР№СЃРєРѕР№ Р°РєР°РґРµРјРёРё РЅР°СѓРє. 2010. 
+\No 3. РЎ.~4--10.
 \end{verbatim}
 
-\section{Теоремоподобные окружения}
-Для теорем, утверждений и пр. необходимо использовать соответствующие
-окружения. Например:
+\section{РўРµРѕСЂРµРјРѕРїРѕРґРѕР±РЅС‹Рµ РѕРєСЂСѓР¶РµРЅРёСЏ}
+Р”Р»СЏ С‚РµРѕСЂРµРј, СѓС‚РІРµСЂР¶РґРµРЅРёР№ Рё РїСЂ. РЅРµРѕР±С…РѕРґРёРјРѕ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰РёРµ
+РѕРєСЂСѓР¶РµРЅРёСЏ. РќР°РїСЂРёРјРµСЂ:
 
 \begin{State} 
-В предложенной модели системы обслуживания при
-$\rho=ES/ET<1$ условие $ES^{\alpha+1}<\infty$ является достаточным для 
-конечности момента порядка $\alpha$ времени ожидания в системе, $ED^\alpha<\infty$.
+Р’ РїСЂРµРґР»РѕР¶РµРЅРЅРѕР№ РјРѕРґРµР»Рё СЃРёСЃС‚РµРјС‹ РѕР±СЃР»СѓР¶РёРІР°РЅРёСЏ РїСЂРё
+$\rho=ES/ET<1$ СѓСЃР»РѕРІРёРµ $ES^{\alpha+1}<\infty$ СЏРІР»СЏРµС‚СЃСЏ РґРѕСЃС‚Р°С‚РѕС‡РЅС‹Рј РґР»СЏ 
+РєРѕРЅРµС‡РЅРѕСЃС‚Рё РјРѕРјРµРЅС‚Р° РїРѕСЂСЏРґРєР° $\alpha$ РІСЂРµРјРµРЅРё РѕР¶РёРґР°РЅРёСЏ РІ СЃРёСЃС‚РµРјРµ, $ED^\alpha<\infty$.
 \end{State}
 \begin{proof}
-Очевидно.
+РћС‡РµРІРёРґРЅРѕ.
 \end{proof}
 
-В данном случае было использовано окружение \verb"\begin{State}...\end{State}". Для
-набора доказательства использовалось окружение \verb"\begin{proof}...\end{proof}".
-Доступные автору теоремоподобные окружения перечислены в Таблице~\ref{theorems}.
+Р’ РґР°РЅРЅРѕРј СЃР»СѓС‡Р°Рµ Р±С‹Р»Рѕ РёСЃРїРѕР»СЊР·РѕРІР°РЅРѕ РѕРєСЂСѓР¶РµРЅРёРµ \verb"\begin{State}...\end{State}". Р”Р»СЏ
+РЅР°Р±РѕСЂР° РґРѕРєР°Р·Р°С‚РµР»СЊСЃС‚РІР° РёСЃРїРѕР»СЊР·РѕРІР°Р»РѕСЃСЊ РѕРєСЂСѓР¶РµРЅРёРµ \verb"\begin{proof}...\end{proof}".
+Р”РѕСЃС‚СѓРїРЅС‹Рµ Р°РІС‚РѕСЂСѓ С‚РµРѕСЂРµРјРѕРїРѕРґРѕР±РЅС‹Рµ РѕРєСЂСѓР¶РµРЅРёСЏ РїРµСЂРµС‡РёСЃР»РµРЅС‹ РІ РўР°Р±Р»РёС†Рµ~\ref{theorems}.
 
 \begin{table}[H]
 \centering
-\caption{Теоремоподобные окружения}
+\caption{РўРµРѕСЂРµРјРѕРїРѕРґРѕР±РЅС‹Рµ РѕРєСЂСѓР¶РµРЅРёСЏ}
 \begin{tabular}{|l|l|}
 \hline
-\verb"Theorem" & Теорема\\
-\verb"Lemma" & Лемма\\
-\verb"State" & Утверждение\\
-\verb"Corollary" & Следствие\\
-\verb"Axiom" & Аксиома\\
-\verb"Definition" & Определение\\
-\verb"Example" & Пример\\
-\verb"Remark" & Замечание\\
+\verb"Theorem" & РўРµРѕСЂРµРјР°\\
+\verb"Lemma" & Р›РµРјРјР°\\
+\verb"State" & РЈС‚РІРµСЂР¶РґРµРЅРёРµ\\
+\verb"Corollary" & РЎР»РµРґСЃС‚РІРёРµ\\
+\verb"Axiom" & РђРєСЃРёРѕРјР°\\
+\verb"Definition" & РћРїСЂРµРґРµР»РµРЅРёРµ\\
+\verb"Example" & РџСЂРёРјРµСЂ\\
+\verb"Remark" & Р—Р°РјРµС‡Р°РЅРёРµ\\
 \hline
 \end{tabular}
 \label{theorems}
 \end{table}
 
-Для определений, примеров и замечаний используется прямое написание.
+Р”Р»СЏ РѕРїСЂРµРґРµР»РµРЅРёР№, РїСЂРёРјРµСЂРѕРІ Рё Р·Р°РјРµС‡Р°РЅРёР№ РёСЃРїРѕР»СЊР·СѓРµС‚СЃСЏ РїСЂСЏРјРѕРµ РЅР°РїРёСЃР°РЅРёРµ.
 \begin{Example*}
-Например, как в этом примере.
+РќР°РїСЂРёРјРµСЂ, РєР°Рє РІ СЌС‚РѕРј РїСЂРёРјРµСЂРµ.
 \end{Example*}
 
-Соответствующие версии окружений <<со звездой>> также работают. Пример
-выше был набран такой командой:
+РЎРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰РёРµ РІРµСЂСЃРёРё РѕРєСЂСѓР¶РµРЅРёР№ <<СЃРѕ Р·РІРµР·РґРѕР№>> С‚Р°РєР¶Рµ СЂР°Р±РѕС‚Р°СЋС‚. РџСЂРёРјРµСЂ
+РІС‹С€Рµ Р±С‹Р» РЅР°Р±СЂР°РЅ С‚Р°РєРѕР№ РєРѕРјР°РЅРґРѕР№:
 
 \begin{verbatim}
 \begin{Example*}
-Например, как в этом примере.
+РќР°РїСЂРёРјРµСЂ, РєР°Рє РІ СЌС‚РѕРј РїСЂРёРјРµСЂРµ.
 \end{Example*}
 \end{verbatim}
 
 \bfullwidth
 \begin{table}[H]
-\caption{Таблица, демонстрирующая возможность размещения на всю ширину страницы}
+\caption{РўР°Р±Р»РёС†Р°, РґРµРјРѕРЅСЃС‚СЂРёСЂСѓСЋС‰Р°СЏ РІРѕР·РјРѕР¶РЅРѕСЃС‚СЊ СЂР°Р·РјРµС‰РµРЅРёСЏ РЅР° РІСЃСЋ С€РёСЂРёРЅСѓ СЃС‚СЂР°РЅРёС†С‹}
 \begin{tabular}{|c|c|c|c|c|}
 \hline
-Первая колонка & вторая колонка & третья колонка & четвертая колонка & пятая колонна\\
+РџРµСЂРІР°СЏ РєРѕР»РѕРЅРєР° & РІС‚РѕСЂР°СЏ РєРѕР»РѕРЅРєР° & С‚СЂРµС‚СЊСЏ РєРѕР»РѕРЅРєР° & С‡РµС‚РІРµСЂС‚Р°СЏ РєРѕР»РѕРЅРєР° & РїСЏС‚Р°СЏ РєРѕР»РѕРЅРЅР°\\
 \hline
 \end{tabular}
 \label{tab_width}
 \end{table}
 \efullwidth
 
-\section{Рисунки и таблицы}
-Рисунки и таблицы могут вставляться как на всю ширину страницы,
-так и на ширину колонки. Желательно использовать рисунки формата pdf. 
-Для конвертации из формата eps можно воспользоваться утилитой epstopdf.
-Так, например, Рис.~\ref{fig1} был вставлен на ширину колонки командой
+\section{Р РёСЃСѓРЅРєРё Рё С‚Р°Р±Р»РёС†С‹}
+Р РёСЃСѓРЅРєРё Рё С‚Р°Р±Р»РёС†С‹ РјРѕРіСѓС‚ РІСЃС‚Р°РІР»СЏС‚СЊСЃСЏ РєР°Рє РЅР° РІСЃСЋ С€РёСЂРёРЅСѓ СЃС‚СЂР°РЅРёС†С‹,
+С‚Р°Рє Рё РЅР° С€РёСЂРёРЅСѓ РєРѕР»РѕРЅРєРё. Р–РµР»Р°С‚РµР»СЊРЅРѕ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ СЂРёСЃСѓРЅРєРё С„РѕСЂРјР°С‚Р° pdf. 
+Р”Р»СЏ РєРѕРЅРІРµСЂС‚Р°С†РёРё РёР· С„РѕСЂРјР°С‚Р° eps РјРѕР¶РЅРѕ РІРѕСЃРїРѕР»СЊР·РѕРІР°С‚СЊСЃСЏ СѓС‚РёР»РёС‚РѕР№ epstopdf.
+РўР°Рє, РЅР°РїСЂРёРјРµСЂ, Р РёСЃ.~\ref{fig1} Р±С‹Р» РІСЃС‚Р°РІР»РµРЅ РЅР° С€РёСЂРёРЅСѓ РєРѕР»РѕРЅРєРё РєРѕРјР°РЅРґРѕР№
 \begin{verbatim}
 \begin{figure}[H]
 \includegraphics[keepaspectratio=true,
  width=0.9\columnwidth]{delay_80.pdf}
-\caption{Задержки в модели 
- 10-узловой системы}
+\caption{Р—Р°РґРµСЂР¶РєРё РІ РјРѕРґРµР»Рё 
+ 10-СѓР·Р»РѕРІРѕР№ СЃРёСЃС‚РµРјС‹}
 \label{fig1}
 \end{figure}
 \end{verbatim}
 
 \begin{figure}[H]
     \includegraphics[keepaspectratio=true,width=0.9\columnwidth]{delay_80.pdf}
-    \caption{Задержки в модели 10-узловой системы}
+    \caption{Р—Р°РґРµСЂР¶РєРё РІ РјРѕРґРµР»Рё 10-СѓР·Р»РѕРІРѕР№ СЃРёСЃС‚РµРјС‹}
     \label{fig1}
 \end{figure}
 
 
 
-\section{Размещение на всю ширину страницы}
-В стилевом файле предусмотрена возможность размещения формул, рисунков
-и таблиц на ширину страницы. Для этого размещаемый элемент необходимо
-заключить между командами \verb'\bfullwidth' и \verb'\efullwidth'.
+\section{Р Р°Р·РјРµС‰РµРЅРёРµ РЅР° РІСЃСЋ С€РёСЂРёРЅСѓ СЃС‚СЂР°РЅРёС†С‹}
+Р’ СЃС‚РёР»РµРІРѕРј С„Р°Р№Р»Рµ РїСЂРµРґСѓСЃРјРѕС‚СЂРµРЅР° РІРѕР·РјРѕР¶РЅРѕСЃС‚СЊ СЂР°Р·РјРµС‰РµРЅРёСЏ С„РѕСЂРјСѓР», СЂРёСЃСѓРЅРєРѕРІ
+Рё С‚Р°Р±Р»РёС† РЅР° С€РёСЂРёРЅСѓ СЃС‚СЂР°РЅРёС†С‹. Р”Р»СЏ СЌС‚РѕРіРѕ СЂР°Р·РјРµС‰Р°РµРјС‹Р№ СЌР»РµРјРµРЅС‚ РЅРµРѕР±С…РѕРґРёРјРѕ
+Р·Р°РєР»СЋС‡РёС‚СЊ РјРµР¶РґСѓ РєРѕРјР°РЅРґР°РјРё \verb'\bfullwidth' Рё \verb'\efullwidth'.
  
-Пример формулы на всю ширину страницы:
+РџСЂРёРјРµСЂ С„РѕСЂРјСѓР»С‹ РЅР° РІСЃСЋ С€РёСЂРёРЅСѓ СЃС‚СЂР°РЅРёС†С‹:
 \bfullwidth
 \begin{equation}
 Y=A_1x+A_2x^2+\ldots +A_nx^n.
 \end{equation}
 \efullwidth
-Набран пример следующим образом:
+РќР°Р±СЂР°РЅ РїСЂРёРјРµСЂ СЃР»РµРґСѓСЋС‰РёРј РѕР±СЂР°Р·РѕРј:
 \begin{verbatim}
 \bfullwidth
 \begin{equation}
@@ -237,14 +237,14 @@ Y=A_1x+A_2x^2+\ldots +A_nx^n.
 \end{verbatim}
 
 
-Пример размещения таблицы на ширину страницы (см. таблицу~\ref{tab_width}):
+РџСЂРёРјРµСЂ СЂР°Р·РјРµС‰РµРЅРёСЏ С‚Р°Р±Р»РёС†С‹ РЅР° С€РёСЂРёРЅСѓ СЃС‚СЂР°РЅРёС†С‹ (СЃРј. С‚Р°Р±Р»РёС†Сѓ~\ref{tab_width}):
 \begin{verbatim}
 \bfullwidth
 \centering
 \begin{table}[H]
 \begin{tabular}{|c|c|c|c|c|}
 \hline
-Первая колонка & ...\\
+РџРµСЂРІР°СЏ РєРѕР»РѕРЅРєР° & ...\\
 \hline
 \end{tabular}
 \label{tab_width}
@@ -252,31 +252,31 @@ Y=A_1x+A_2x^2+\ldots +A_nx^n.
 \efullwidth
 \end{verbatim}
 
-Рис.~\ref{fig5} демонстрирует возможности вставки по всей ширине страницы.
-Это было достигнуто при помощи команды
+Р РёСЃ.~\ref{fig5} РґРµРјРѕРЅСЃС‚СЂРёСЂСѓРµС‚ РІРѕР·РјРѕР¶РЅРѕСЃС‚Рё РІСЃС‚Р°РІРєРё РїРѕ РІСЃРµР№ С€РёСЂРёРЅРµ СЃС‚СЂР°РЅРёС†С‹.
+Р­С‚Рѕ Р±С‹Р»Рѕ РґРѕСЃС‚РёРіРЅСѓС‚Рѕ РїСЂРё РїРѕРјРѕС‰Рё РєРѕРјР°РЅРґС‹
 \begin{verbatim}
 \bfullwidth
 \begin{figure}
 \includegraphics[height=100mm,...}
-\caption{Задержки в модели...}
+\caption{Р—Р°РґРµСЂР¶РєРё РІ РјРѕРґРµР»Рё...}
 \label{fig5}
 \end{figure}
 \efullwidth
 \end{verbatim}
-Следует обратить внимание на то, что вышеуказанная команда
-вставит рисунок не ближе, чем на следующей странице сверху,
-а не сразу на месте указания команды.
+РЎР»РµРґСѓРµС‚ РѕР±СЂР°С‚РёС‚СЊ РІРЅРёРјР°РЅРёРµ РЅР° С‚Рѕ, С‡С‚Рѕ РІС‹С€РµСѓРєР°Р·Р°РЅРЅР°СЏ РєРѕРјР°РЅРґР°
+РІСЃС‚Р°РІРёС‚ СЂРёСЃСѓРЅРѕРє РЅРµ Р±Р»РёР¶Рµ, С‡РµРј РЅР° СЃР»РµРґСѓСЋС‰РµР№ СЃС‚СЂР°РЅРёС†Рµ СЃРІРµСЂС…Сѓ,
+Р° РЅРµ СЃСЂР°Р·Сѓ РЅР° РјРµСЃС‚Рµ СѓРєР°Р·Р°РЅРёСЏ РєРѕРјР°РЅРґС‹.
 
-\section{Сведения об авторах}
-После основного текста оформляются сведения об авторах. Используется
-окружение \verb"\begin{aboutauthors}...\end{aboutauthors}". При этом следует обратить внимание, что
-работа ведется в двухколоночном режиме, поэтому необходимо вручную 
-указать разрыв колонки для отделения сведений на русском и английском
-языках. Например:
+\section{РЎРІРµРґРµРЅРёСЏ РѕР± Р°РІС‚РѕСЂР°С…}
+РџРѕСЃР»Рµ РѕСЃРЅРѕРІРЅРѕРіРѕ С‚РµРєСЃС‚Р° РѕС„РѕСЂРјР»СЏСЋС‚СЃСЏ СЃРІРµРґРµРЅРёСЏ РѕР± Р°РІС‚РѕСЂР°С…. РСЃРїРѕР»СЊР·СѓРµС‚СЃСЏ
+РѕРєСЂСѓР¶РµРЅРёРµ \verb"\begin{aboutauthors}...\end{aboutauthors}". РџСЂРё СЌС‚РѕРј СЃР»РµРґСѓРµС‚ РѕР±СЂР°С‚РёС‚СЊ РІРЅРёРјР°РЅРёРµ, С‡С‚Рѕ
+СЂР°Р±РѕС‚Р° РІРµРґРµС‚СЃСЏ РІ РґРІСѓС…РєРѕР»РѕРЅРѕС‡РЅРѕРј СЂРµР¶РёРјРµ, РїРѕСЌС‚РѕРјСѓ РЅРµРѕР±С…РѕРґРёРјРѕ РІСЂСѓС‡РЅСѓСЋ 
+СѓРєР°Р·Р°С‚СЊ СЂР°Р·СЂС‹РІ РєРѕР»РѕРЅРєРё РґР»СЏ РѕС‚РґРµР»РµРЅРёСЏ СЃРІРµРґРµРЅРёР№ РЅР° СЂСѓСЃСЃРєРѕРј Рё Р°РЅРіР»РёР№СЃРєРѕРј
+СЏР·С‹РєР°С…. РќР°РїСЂРёРјРµСЂ:
 \begin{verbatim}
 \begin{aboutauthors}
-\authorsname{Румянцев Александр...}
-аспирант\\ 
+\authorsname{Р СѓРјСЏРЅС†РµРІ РђР»РµРєСЃР°РЅРґСЂ...}
+Р°СЃРїРёСЂР°РЅС‚\\ 
 ...
 \columnbreak
 \authorsname{Rumyantsev, Alexander}
@@ -284,35 +284,35 @@ Y=A_1x+A_2x^2+\ldots +A_nx^n.
 \end{aboutauthors}
 \end{verbatim}
 
-\section{Заключение}
-Компиляцию исходного файла желательно выполнять с помощью макроса \verb"pdflatex".
+\section{Р—Р°РєР»СЋС‡РµРЅРёРµ}
+РљРѕРјРїРёР»СЏС†РёСЋ РёСЃС…РѕРґРЅРѕРіРѕ С„Р°Р№Р»Р° Р¶РµР»Р°С‚РµР»СЊРЅРѕ РІС‹РїРѕР»РЅСЏС‚СЊ СЃ РїРѕРјРѕС‰СЊСЋ РјР°РєСЂРѕСЃР° \verb"pdflatex".
 
-В работе рассмотрены основные технические аспекты подготовки статьи
-для сборника Трудов Карельского научного центра РАН. Предложения
-и пожелания по доработке стилевого файла, а также текста этого документа
-принимаются по электронному адресу, указанному в разделе <<Сведения об авторах>>.
+Р’ СЂР°Р±РѕС‚Рµ СЂР°СЃСЃРјРѕС‚СЂРµРЅС‹ РѕСЃРЅРѕРІРЅС‹Рµ С‚РµС…РЅРёС‡РµСЃРєРёРµ Р°СЃРїРµРєС‚С‹ РїРѕРґРіРѕС‚РѕРІРєРё СЃС‚Р°С‚СЊРё
+РґР»СЏ СЃР±РѕСЂРЅРёРєР° РўСЂСѓРґРѕРІ РљР°СЂРµР»СЊСЃРєРѕРіРѕ РЅР°СѓС‡РЅРѕРіРѕ С†РµРЅС‚СЂР° Р РђРќ. РџСЂРµРґР»РѕР¶РµРЅРёСЏ
+Рё РїРѕР¶РµР»Р°РЅРёСЏ РїРѕ РґРѕСЂР°Р±РѕС‚РєРµ СЃС‚РёР»РµРІРѕРіРѕ С„Р°Р№Р»Р°, Р° С‚Р°РєР¶Рµ С‚РµРєСЃС‚Р° СЌС‚РѕРіРѕ РґРѕРєСѓРјРµРЅС‚Р°
+РїСЂРёРЅРёРјР°СЋС‚СЃСЏ РїРѕ СЌР»РµРєС‚СЂРѕРЅРЅРѕРјСѓ Р°РґСЂРµСЃСѓ, СѓРєР°Р·Р°РЅРЅРѕРјСѓ РІ СЂР°Р·РґРµР»Рµ <<РЎРІРµРґРµРЅРёСЏ РѕР± Р°РІС‚РѕСЂР°С…>>.
 
 \begin{thebibliography}{9}
-%\bibitem[Борисов, Тихомирова(2010)]{Trans}
+%\bibitem[Р‘РѕСЂРёСЃРѕРІ, РўРёС…РѕРјРёСЂРѕРІР°(2010)]{Trans}
 \bibitem{Trans}
-\textit{Борисов~Г.~А., Тихомирова~Т.~А.} Характеристики и свойства потерь энергии
-и мощности на пределах энергетического хозяйства региона //
-Труды Карельского научного центра Российской академии наук. 2010. \No 3. С.~4--10.
+\textit{Р‘РѕСЂРёСЃРѕРІ~Р“.~Рђ., РўРёС…РѕРјРёСЂРѕРІР°~Рў.~Рђ.} РҐР°СЂР°РєС‚РµСЂРёСЃС‚РёРєРё Рё СЃРІРѕР№СЃС‚РІР° РїРѕС‚РµСЂСЊ СЌРЅРµСЂРіРёРё
+Рё РјРѕС‰РЅРѕСЃС‚Рё РЅР° РїСЂРµРґРµР»Р°С… СЌРЅРµСЂРіРµС‚РёС‡РµСЃРєРѕРіРѕ С…РѕР·СЏР№СЃС‚РІР° СЂРµРіРёРѕРЅР° //
+РўСЂСѓРґС‹ РљР°СЂРµР»СЊСЃРєРѕРіРѕ РЅР°СѓС‡РЅРѕРіРѕ С†РµРЅС‚СЂР° Р РѕСЃСЃРёР№СЃРєРѕР№ Р°РєР°РґРµРјРёРё РЅР°СѓРє. 2010. \No 3. РЎ.~4--10.
 
 \bibitem{Latexrus}
-\textit{Львовский С. М.} Набор и верстка в системе \LaTeX. М., 2003. 448~с.
+\textit{Р›СЊРІРѕРІСЃРєРёР№ РЎ. Рњ.} РќР°Р±РѕСЂ Рё РІРµСЂСЃС‚РєР° РІ СЃРёСЃС‚РµРјРµ \LaTeX. Рњ., 2003. 448~СЃ.
 \end{thebibliography}
 \end{articletext}
 
 
-\section{СВЕДЕНИЯ ОБ АВТОРE:}
+\section{РЎР’Р•Р”Р•РќРРЇ РћР‘ РђР’РўРћР E:}
 \begin{aboutauthors}
-\authorsname{Румянцев Александр Cергеевич}
-аспирант\\ 
-Институт прикладных математических исследований КарНЦ РАН\\ 
-ул. Пушкинская, 11, Петрозаводск, Республика Карелия, Россия, 185910\\
-эл. почта: ar0@krc.karelia.ru\\
-тел.: (8142) 763370
+\authorsname{Р СѓРјСЏРЅС†РµРІ РђР»РµРєСЃР°РЅРґСЂ CРµСЂРіРµРµРІРёС‡}
+Р°СЃРїРёСЂР°РЅС‚\\ 
+РРЅСЃС‚РёС‚СѓС‚ РїСЂРёРєР»Р°РґРЅС‹С… РјР°С‚РµРјР°С‚РёС‡РµСЃРєРёС… РёСЃСЃР»РµРґРѕРІР°РЅРёР№ РљР°СЂРќР¦ Р РђРќ\\ 
+СѓР». РџСѓС€РєРёРЅСЃРєР°СЏ, 11, РџРµС‚СЂРѕР·Р°РІРѕРґСЃРє, Р РµСЃРїСѓР±Р»РёРєР° РљР°СЂРµР»РёСЏ, Р РѕСЃСЃРёСЏ, 185910\\
+СЌР». РїРѕС‡С‚Р°: ar0@krc.karelia.ru\\
+С‚РµР».: (8142) 763370
 
 \columnbreak
 
