Добавил обзор А. Н. Кирилова

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -9,8 +9,9 @@
 \rustitle{Обзор методов (уточнить - каких?) \newline по решению задачи разрешения лексической многозначности}
 \engtitle{Word-sense disambiguation methods (specific?) review}
 
-\rusauthor{С.~С.~Ткач}
-\engauthor{S.~S.~Tkach}
+\rusauthor{С.~С.~Ткач, Е.~А.~Ярышкина, А.~Н.~Кирилов}
+\engauthor{S.~S.~Tkach, E.~A.~Yaryshkina, A.~N.~Kirilov}
+
 
 \organization{Институт прикладных математических исследований Карельского научного центра РАН}
 
@@ -109,7 +110,7 @@ this text as a template. This paragraph is formatted as an Abstract of the artic
 \efullwidth
 
 \section{Обзор статьи  <<Resolving Ambiguities in Biomedical Text With Unsupervised Clustering Approaches>>}
-В статье \cite{Savova} изучаются уже существующие методы кластеризации без учителя и их эффективность для решения лексической многозначности при обработке текстов по биомедицине. Решение проблем лексической многозначности в данной области включает в себя не только традиционные задачи присвоения ранее определенных смысловых значений для терминов, но так же и обнаружения новых значений для них, ещё не включённых в данную онтологию.
+В статье \cite{Savova 2005} изучаются уже существующие методы кластеризации без учителя и их эффективность для решения лексической многозначности при обработке текстов по биомедицине. Решение проблем лексической многозначности в данной области включает в себя не только традиционные задачи присвоения ранее определенных смысловых значений для терминов, но так же и обнаружения новых значений для них, ещё не включённых в данную онтологию.
 \parindent=0,5cm
 
 Авторы описали методологию метода решения лексической многозначности без учителя, учитываемые лексические признаки и наборы экспериментальных данных. В качестве оценки эффективности алгоритмов кластеризации текста была предложена F-мера. 
@@ -121,7 +122,7 @@ this text as a template. This paragraph is formatted as an Abstract of the artic
 Процесс кластеризации продолжается до тех пор, пока не будет найдено предварительно заданное число кластеров. В данной статье выбор шести кластеров основан на том факте, что это больше, чем максимальное число возможных значений любого английского слова, наблюдаемое среди данных (большинство слов имеют два-три значения). Нормализация текста не выполняется.
 \parindent=0,5cm
 
-Данные в этом исследовании состоят из ряда контекстов, которые включают данное целевое слово, где у каждого целевого слова вручную отмечено -- какое значение из словаря было использовано в этом контексте. Контекст -- это единственный источник информации о целевом слове. Цель исследования -- преобразовать контекст в контекстные вектора первого и второго порядка \cite{epr:website}. Контекстные вектора содержат следующие «лексические свойства»: биграммы, совместную встречаемость и совместную встречаемость целевого слова. Биграммами являются как двухсловные словосочетания, так и любые два слова, расположенные рядом в некотором тексте. Для лингвистических исследований могут быть полезны только упорядоченные наборы биграмм \cite{Averin}. 
+Данные в этом исследовании состоят из ряда контекстов, которые включают данное целевое слово, где у каждого целевого слова вручную отмечено -- какое значение из словаря было использовано в этом контексте. Контекст -- это единственный источник информации о целевом слове. Цель исследования -- преобразовать контекст в контекстные вектора первого и второго порядка \cite{epr:website}. Контекстные вектора содержат следующие «лексические свойства»: биграммы, совместную встречаемость и совместную встречаемость целевого слова. Биграммами являются как двухсловные словосочетания, так и любые два слова, расположенные рядом в некотором тексте. Для лингвистических исследований могут быть полезны только упорядоченные наборы биграмм \cite{Averin 2006}. 
 \parindent=0,5cm
 
 Экспериментальные данные -- это набор NLM WSD \cite{UMLS:website} (NLM -- национальная библиотека медицины США), в котором значения слов взяты из UMLS (единая система медицинской терминологии). UMLS имеет три базы знаний: 
@@ -132,16 +133,44 @@ this text as a template. This paragraph is formatted as an Abstract of the artic
 \end{itemize}
 \parindent=0,5cm
 
-Авторы успешно проверили по три конфигурации существующих методов (PB -- Pedersen and Bruce \cite{Pedersen}, SC -- Sch?tze \cite{Schutze}) и оценили эффективность использования SVD (сингулярное разложение матриц). Методы PB основаны на контекстных векторах первого порядка -- признаки одновременного присутствия целевого слова или биграммы. Рассчитывается среднее расстояние между кластерами или применяется  метод бисекций. PB методы подходят для работы с довольно большими наборами данных. Методы SC основаны на представлениях второго порядка -- матрицы признаков одновременного присутствия или биграммы, где каждая строка и столбец -- вектор признаков первого порядка данного слова. Так же рассчитывается среднее расстояние между кластерами или применяется  метод бисекций. SC методы подходят для обработки небольших наборов данных.  
+Авторы успешно проверили по три конфигурации существующих методов (PB -- Pedersen and Bruce \cite{Pedersen 1997}, SC -- Sch?tze \cite{Schutze 1998}) и оценили эффективность использования SVD (сингулярное разложение матриц). Методы PB основаны на контекстных векторах первого порядка -- признаки одновременного присутствия целевого слова или биграммы. Рассчитывается среднее расстояние между кластерами или применяется  метод бисекций. PB методы подходят для работы с довольно большими наборами данных. Методы SC основаны на представлениях второго порядка -- матрицы признаков одновременного присутствия или биграммы, где каждая строка и столбец -- вектор признаков первого порядка данного слова. Так же рассчитывается среднее расстояние между кластерами или применяется  метод бисекций. SC методы подходят для обработки небольших наборов данных.  
 
 \parindent=0,5cm
 Метод SC2 (признаки одновременного присутствия второго порядка, среднее расстояние между элементами кластера в пространстве подобия) с применением и без SVD показал лучшие результаты: всего 56 сравниваемых экземпляров, в 47 случаях метод SC2 показал наилучшие результаты, в 7 случаях результаты незначительно отличаются от других проверяемых методов.
 \parindent=0,5cm
 
-Все эксперименты, указанные в исследовании, выполнялись с помощью пакета SenseClusters \cite{SC:website}. В ходе исследования было проведено два эксперимента для разных наборов данных. Маленький тренировочный набор -- это набор NLM WSD, который включает 5000 экземпляров для 50 часто встречаемых неоднозначных терминов из Метатезауруса UMLS. Каждый неоднозначный термин имеет по 100 экземпляров с указанным вручную значением. У 21 термина максимальное число экземпляров находится в пределах от 45 до 79 экземпляров. У 29 терминов число экземпляров от 80 до 100 для  конкретного значения. Стоит отметить, что каждый термин имеет категорию «ни одно из вышеупомянутых», которая охватывает все оставшиеся значения, не соответствующие доступным в UMLS. Большой тренировочный набор является реконструкцией «1999 Medline», который был разработан Weeber \cite{Weeber}. Были определены все формы из набора NLM WSD и сопоставлены с тезисами «1999 Medline». Для создания тренировочного набора экземпляров использовались только те тезисы из «1999 Medline», которым было найдено соответствие в наборе NLM WSD.
+Все эксперименты, указанные в исследовании, выполнялись с помощью пакета SenseClusters \cite{SC:website}. В ходе исследования было проведено два эксперимента для разных наборов данных. Маленький тренировочный набор -- это набор NLM WSD, который включает 5000 экземпляров для 50 часто встречаемых неоднозначных терминов из Метатезауруса UMLS. Каждый неоднозначный термин имеет по 100 экземпляров с указанным вручную значением. У 21 термина максимальное число экземпляров находится в пределах от 45 до 79 экземпляров. У 29 терминов число экземпляров от 80 до 100 для  конкретного значения. Стоит отметить, что каждый термин имеет категорию «ни одно из вышеупомянутых», которая охватывает все оставшиеся значения, не соответствующие доступным в UMLS. Большой тренировочный набор является реконструкцией «1999 Medline», который был разработан Weeber \cite{Weeber 2001}. Были определены все формы из набора NLM WSD и сопоставлены с тезисами «1999 Medline». Для создания тренировочного набора экземпляров использовались только те тезисы из «1999 Medline», которым было найдено соответствие в наборе NLM WSD.
 \parindent=0,5cm
 
 Использование целиком текста аннотации статьи в качестве контекста приводит к лучшим результатам, чем использование отдельных предложений. С одной стороны, большой объем контекста, представленный аннотацией, дает богатую коллекцию признаков, с другой стороны, в коллекции WSD представлено небольшое число контекстов.
+
+\section{Реферат статьи  <<Word  sense  disambiguation  with  very  large neural  networks  extracted  from machine readable dictionaries >>}
+
+\parindent=0,5cm
+
+Настоящий текст является рефератом статьи \cite{VERONIS 
+1990}, в которой описан метод автоматического построения очень больших нейронных сетей (VLNN) с помощью текстов, извлекаемых из машинно-читаемых словарей (MRD), и рассмотрено использование этих сетей в задачах разрешения лексической неоднозначности (WSD). 
+
+\parindent=0,5cm
+
+В дальнейшем будем называть слова, смысл которых требуется установить целевыми словами. 
+
+\parindent=0,5cm
+
+Широко известен метод Леска \cite{LESK 1986}  использования  информации  из MRD для  задачи  WSD.  Суть этого метода состоит в вычислении  так называемой <<степени пересечения>>, т.е.  количества общих слов в словарных определениях слов из контекста (“окна”) условного размера, содержащего целевое слово. Основной недостаток метода Леска -- зависимость  от  словарной  статьи, т.е. от слов, входящих в нее. Стратегия преодоления  этого  недостатка -- использование словарных статей, определяющих слова, входящие в другие словарные статьи, начиная со словарных статей, соответствующих  словам  из  контекста. Таким образом, образуются  достаточно  длинные   пути  из слов, входящих в словарные статьи. Эта  идея  лежит в основе топологии (строения) VLNN.
+
+\parindent=0,5cm
+
+Использование нейронных сетей  для WSD  было предложено в работах \cite{COTTRELL 1983,WALTZ 1985}.   В рассматриваемой  статье для построения  VLNN использован  словарь  Collins  English  Dictionary.
+
+\parindent=0,5cm
+
+Топология сети. Целевое слово представлено  узлом, соединенным активирующими  связями со смысловыми узлами, представляющими все возможные смыслы слова, имеющиеся  в словарных статьях. Каждый смысловой узел, в свою очередь, соединен  активирующими  связями с узлами, представляющими  слова в словарной статье, соответствующей определению данного смысла. Процесс соединения повторяется многократно, создавая большую сеть взаимосвязанных узлов. В идеале сеть может содержать весь словарь. Авторы, по практическим соображениям, ограничиваются несколькими тысячами узлов и 10 -- 20 тысячами соединений. Слова представлены своими леммами (каноническими формами). Узлы, представляющие различные смыслы данного слова, соединены запрещающими (подавляющими) связями.
+
+\parindent=0,5cm
+
+Алгоритм функционирования сети. При запуске сети первыми активируются узлы входного  слова, которое кодируется согласно принятому правилу. Затем  каждый  входной узел посылает активирующий сигнал своим смысловым узлам, с которыми он соединен. В результате  сигналы распространяются по всей сети в течение определенного числа циклов. В каждом цикле узлы слова и  его смыслов получают обратные сигналы от узлов, соединенных с ними. Узлы конкурирующих смыслов посылают взаимно подавляющие сигналы.  Взаимодействие  сигналов  обратной  связи  и  подавления,  в соответствии со стратегией <<победитель получает все>>, позволяет увеличить активацию узлов-слов и соответствующих им правильных узлов-смыслов,  одновременно  уменьшая  активацию  узлов  соответствующих неправильным смыслам. После нескольких десятков  циклов сеть стабилизируется  в  состоянии, в котором активированы  только узлы-смыслы с наиболее активированными связями  с    узлами-словами. В статье  не  указан  алгоритм  настройки, т.е.  обучения  сети.  Видимо,  используется  метод  встречного  распространения (back  propagation).    
+
 
 \section{Библиография}
 Библиографические ссылки принято оформлять в виде [номер], в отличие от
@@ -329,35 +358,72 @@ Y=A_1x+A_2x^2+\ldots +A_nx^n.
 \bibitem{Latexrus}
 \textit{Львовский С. М.} Набор и верстка в системе \LaTeX. М., 2003. 448~с.
 
-\bibitem{Savova}
-\textit{Savova, G.} Resolving ambiguities in biomedical text with unsupervised clustering approaches. University of Minnesota Supercomputing Institute Research Report, 2005.
-
-\bibitem{Averin}
+\bibitem{Averin 2006}
 \textit{Аверин, А.Н.} Разработка сервиса поиска биграмм // Труды международной конференции «Корпусная лингвистика–2006. СПб., С.Петерб. ун-та., 2006.
-
-\bibitem{Pedersen}
-\textit{Pedersen, T. and Bruce, R.}Distinguishing word senses in untagged text. Proc.EMNLP.Providence, RI, 1997.
-
-\bibitem{Schutze}
-\textit{Schutze, H.}Automatic Word Sense Discrimination. Computational Linguistics, vol. 24, number 1., 1998.
-
-\bibitem{Weeber}
-\textit{Weeber, M. and Mork, J. and Aronson, A.}Developing a test collection for biomedical word sense disambiguation. Proc. AMIA., 2001.
 
 \bibitem{epr:website}
 \textit{Епрев, А. С.}Применение контекстных векторов в классификации текстовых документов. 2010. http://jre.cplire.ru/iso/oct10/1/text.html
 
-\bibitem{UMLS:website}
-\textit UMLS Terminology Services (UTS). http://umlsks.nlm.nih.gov/kss/servlet/Turbine/template
+\bibitem{COTTRELL 1983}
+\textit{COTTRELL, G. W. and SMALL, S. L.}A connectionist  scheme for modelling word  sense  disambiguation -- Cognition and brain theory. 1983. № 6. P. 89–120. 
+
+\bibitem{LESK 1986}
+\textit{LESK, M.}Automatic sense disambiguation using machine readable dictionaries: How to tell a pine cone from an ice cream cone --  Proceedings  of  the 5th SIGDOC. New York. 1986. P. 24–26.  
+
+\bibitem{Pedersen 1997}
+\textit{Pedersen, T. and Bruce, R.}Distinguishing word senses in untagged text. Proc.EMNLP.Providence, RI, 1997.
+
+\bibitem{Savova 2005}
+\textit{Savova, G.} Resolving ambiguities in biomedical text with unsupervised clustering approaches. University of Minnesota Supercomputing Institute Research Report, 2005.
+
+\bibitem{VERONIS 1990}
+\textit{VERONIS, J. and IDE, N.} Word  sense  disambiguation  with  very  large neural  networks  extracted  from machine readable dictionaries – Proceedings of the 13th International Conference on Computational Linguistics. Helsinki. 1990. P. 389–394.
 
 \bibitem{SC:website}
 \textit{SenseClusters}http://senseclusters.sourceforge.net
+
+\bibitem{Schutze 1998}
+\textit{Schutze, H.}Automatic Word Sense Discrimination. Computational Linguistics, vol. 24, number 1., 1998.
+
+\bibitem{UMLS:website}
+\textit UMLS Terminology Services (UTS). http://umlsks.nlm.nih.gov/kss/servlet/Turbine/template
+
+\bibitem{WALTZ 1985}
+\textit{WALTZ, D. L. and POLLACK, J. B.}Massively parallel parsing: a strongly interactive  model  of  natural  language interpretation – Cognitive science. 1985. № 9. P. 51–74.
+
+\bibitem{Weeber 2001}
+\textit{Weeber, M. and Mork, J. and Aronson, A.}Developing a test collection for biomedical word sense disambiguation. Proc. AMIA., 2001.
+
+
+
+
 
 \end{thebibliography}
 \end{articletext}
 
 
 \section{СВЕДЕНИЯ ОБ АВТОРE:}
+
+\begin{aboutauthors}
+\authorsname{Кирилов Александр Николаевич}
+доктор физико-математических наук\\ 
+доцент\\
+Институт прикладных математических исследований КарНЦ РАН\\ 
+ул. Пушкинская, 11, Петрозаводск, Республика Карелия, Россия, 185910\\
+эл. почта: kirillov@krc.karelia.ru\\
+тел.: (8142) 766312
+
+\columnbreak
+
+\authorsname{Kirilov, Alexander}
+Doctor (DSc) of Physics and Mathematics\\
+Assistant Professor\\
+Institute of Applied Mathematical Research, Karelian Research Centre, Russian Academy of Science\\
+11 Pushkinskaya St., 185910 Petrozavodsk, Karelia, Russia\\
+e-mail: kirillov@krc.karelia.ru\\
+tel.: (8142) 766312
+\end{aboutauthors}
+
 \begin{aboutauthors}
 \authorsname{Румянцев Александр Cергеевич}
 аспирант\\ 
@@ -373,6 +439,25 @@ Institute of Applied Mathematical Research, Karelian Research Centre, Russian Ac
 11 Pushkinskaya St., 185910 Petrozavodsk, Karelia, Russia\\
 e-mail: ar0@krc.karelia.ru\\
 tel.: (8142) 763370
+\end{aboutauthors}
+
+\begin{aboutauthors}
+\authorsname{Ткач Станислав Сергеевич}
+Математический факультет\\ 
+Петрозаводский государственный университет\\
+пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
+тел.: (8953) 547-70-43\\
+tkachkras@gmail.com
+
+\columnbreak
+
+\authorsname{Tkach, Stanislav}
+Student\\
+Faculty of Mathematics\\
+Petrozavodsk State University\\
+Prospect Lenina, 33, Petrozavodsk, Republic of Karelia\\
+tel.: (8953) 547-70-43\\
+tkachkras@gmail.com 
 \end{aboutauthors}
 
 \begin{aboutauthors}
